Week2/Lab02/delete/y.output
State 56 conflicts: 1 shift/reduce


Grammar

    0 $accept: prm $end

    1 prm: HEADER INT MAIN LB RB LCB BODY RCB

    2 BODY: DECLARATION_STATEMENTS PROGRAM_STATEMENTS

    3 DECLARATION_STATEMENTS: DECLARATION_STATEMENT DECLARATION_STATEMENTS
    4                       | DECLARATION_STATEMENT

    5 PROGRAM_STATEMENTS: PROGRAM_STATEMENT PROGRAM_STATEMENTS
    6                   | PROGRAM_STATEMENT

    7 DECLARATION_STATEMENT: INT VAR_LIST SC
    8                      | FLOAT VAR_LIST SC
    9                      | DOUBLE VAR_LIST SC
   10                      | CHAR VAR_LIST SC
   11                      | INT KEYWORDS SC
   12                      | FLOAT KEYWORDS SC
   13                      | DOUBLE KEYWORDS SC
   14                      | CHAR KEYWORDS SC

   15 KEYWORDS: KEY COMA KEYWORDS
   16         | KEY

   17 VAR_LIST: VAR COMA VAR_LIST
   18         | VAR

   19 PROGRAM_STATEMENT: VAR EQ A_EXPN SC
   20                  | KEY EQ A_EXPN SC

   21 A_EXPN: A_EXPN OP A_EXPN
   22       | LB A_EXPN RB
   23       | VAR


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    HEADER (258) 1
    INT (259) 1 7 11
    FLOAT (260) 8 12
    DOUBLE (261) 9 13
    CHAR (262) 10 14
    MAIN (263) 1
    LB (264) 1 22
    RB (265) 1 22
    LCB (266) 1
    RCB (267) 1
    SC (268) 7 8 9 10 11 12 13 14 19 20
    COMA (269) 15 17
    KEY (270) 15 16 20
    VAR (271) 17 18 19 23
    EQ (272) 19 20
    OP (273) 21


Nonterminals, with rules where they appear

    $accept (19)
        on left: 0
    prm (20)
        on left: 1
        on right: 0
    BODY (21)
        on left: 2
        on right: 1
    DECLARATION_STATEMENTS (22)
        on left: 3 4
        on right: 2 3
    PROGRAM_STATEMENTS (23)
        on left: 5 6
        on right: 2 5
    DECLARATION_STATEMENT (24)
        on left: 7 8 9 10 11 12 13 14
        on right: 3 4
    KEYWORDS (25)
        on left: 15 16
        on right: 11 12 13 14 15
    VAR_LIST (26)
        on left: 17 18
        on right: 7 8 9 10 17
    PROGRAM_STATEMENT (27)
        on left: 19 20
        on right: 5 6
    A_EXPN (28)
        on left: 21 22 23
        on right: 19 20 21 22


State 0

    0 $accept: . prm $end

    HEADER  shift, and go to state 1

    prm  go to state 2


State 1

    1 prm: HEADER . INT MAIN LB RB LCB BODY RCB

    INT  shift, and go to state 3


State 2

    0 $accept: prm . $end

    $end  shift, and go to state 4


State 3

    1 prm: HEADER INT . MAIN LB RB LCB BODY RCB

    MAIN  shift, and go to state 5


State 4

    0 $accept: prm $end .

    $default  accept


State 5

    1 prm: HEADER INT MAIN . LB RB LCB BODY RCB

    LB  shift, and go to state 6


State 6

    1 prm: HEADER INT MAIN LB . RB LCB BODY RCB

    RB  shift, and go to state 7


State 7

    1 prm: HEADER INT MAIN LB RB . LCB BODY RCB

    LCB  shift, and go to state 8


State 8

    1 prm: HEADER INT MAIN LB RB LCB . BODY RCB

    INT     shift, and go to state 9
    FLOAT   shift, and go to state 10
    DOUBLE  shift, and go to state 11
    CHAR    shift, and go to state 12

    BODY                    go to state 13
    DECLARATION_STATEMENTS  go to state 14
    DECLARATION_STATEMENT   go to state 15


State 9

    7 DECLARATION_STATEMENT: INT . VAR_LIST SC
   11                      | INT . KEYWORDS SC

    KEY  shift, and go to state 16
    VAR  shift, and go to state 17

    KEYWORDS  go to state 18
    VAR_LIST  go to state 19


State 10

    8 DECLARATION_STATEMENT: FLOAT . VAR_LIST SC
   12                      | FLOAT . KEYWORDS SC

    KEY  shift, and go to state 16
    VAR  shift, and go to state 17

    KEYWORDS  go to state 20
    VAR_LIST  go to state 21


State 11

    9 DECLARATION_STATEMENT: DOUBLE . VAR_LIST SC
   13                      | DOUBLE . KEYWORDS SC

    KEY  shift, and go to state 16
    VAR  shift, and go to state 17

    KEYWORDS  go to state 22
    VAR_LIST  go to state 23


State 12

   10 DECLARATION_STATEMENT: CHAR . VAR_LIST SC
   14                      | CHAR . KEYWORDS SC

    KEY  shift, and go to state 16
    VAR  shift, and go to state 17

    KEYWORDS  go to state 24
    VAR_LIST  go to state 25


State 13

    1 prm: HEADER INT MAIN LB RB LCB BODY . RCB

    RCB  shift, and go to state 26


State 14

    2 BODY: DECLARATION_STATEMENTS . PROGRAM_STATEMENTS

    KEY  shift, and go to state 27
    VAR  shift, and go to state 28

    PROGRAM_STATEMENTS  go to state 29
    PROGRAM_STATEMENT   go to state 30


State 15

    3 DECLARATION_STATEMENTS: DECLARATION_STATEMENT . DECLARATION_STATEMENTS
    4                       | DECLARATION_STATEMENT .

    INT     shift, and go to state 9
    FLOAT   shift, and go to state 10
    DOUBLE  shift, and go to state 11
    CHAR    shift, and go to state 12

    $default  reduce using rule 4 (DECLARATION_STATEMENTS)

    DECLARATION_STATEMENTS  go to state 31
    DECLARATION_STATEMENT   go to state 15


State 16

   15 KEYWORDS: KEY . COMA KEYWORDS
   16         | KEY .

    COMA  shift, and go to state 32

    $default  reduce using rule 16 (KEYWORDS)


State 17

   17 VAR_LIST: VAR . COMA VAR_LIST
   18         | VAR .

    COMA  shift, and go to state 33

    $default  reduce using rule 18 (VAR_LIST)


State 18

   11 DECLARATION_STATEMENT: INT KEYWORDS . SC

    SC  shift, and go to state 34


State 19

    7 DECLARATION_STATEMENT: INT VAR_LIST . SC

    SC  shift, and go to state 35


State 20

   12 DECLARATION_STATEMENT: FLOAT KEYWORDS . SC

    SC  shift, and go to state 36


State 21

    8 DECLARATION_STATEMENT: FLOAT VAR_LIST . SC

    SC  shift, and go to state 37


State 22

   13 DECLARATION_STATEMENT: DOUBLE KEYWORDS . SC

    SC  shift, and go to state 38


State 23

    9 DECLARATION_STATEMENT: DOUBLE VAR_LIST . SC

    SC  shift, and go to state 39


State 24

   14 DECLARATION_STATEMENT: CHAR KEYWORDS . SC

    SC  shift, and go to state 40


State 25

   10 DECLARATION_STATEMENT: CHAR VAR_LIST . SC

    SC  shift, and go to state 41


State 26

    1 prm: HEADER INT MAIN LB RB LCB BODY RCB .

    $default  reduce using rule 1 (prm)


State 27

   20 PROGRAM_STATEMENT: KEY . EQ A_EXPN SC

    EQ  shift, and go to state 42


State 28

   19 PROGRAM_STATEMENT: VAR . EQ A_EXPN SC

    EQ  shift, and go to state 43


State 29

    2 BODY: DECLARATION_STATEMENTS PROGRAM_STATEMENTS .

    $default  reduce using rule 2 (BODY)


State 30

    5 PROGRAM_STATEMENTS: PROGRAM_STATEMENT . PROGRAM_STATEMENTS
    6                   | PROGRAM_STATEMENT .

    KEY  shift, and go to state 27
    VAR  shift, and go to state 28

    $default  reduce using rule 6 (PROGRAM_STATEMENTS)

    PROGRAM_STATEMENTS  go to state 44
    PROGRAM_STATEMENT   go to state 30


State 31

    3 DECLARATION_STATEMENTS: DECLARATION_STATEMENT DECLARATION_STATEMENTS .

    $default  reduce using rule 3 (DECLARATION_STATEMENTS)


State 32

   15 KEYWORDS: KEY COMA . KEYWORDS

    KEY  shift, and go to state 16

    KEYWORDS  go to state 45


State 33

   17 VAR_LIST: VAR COMA . VAR_LIST

    VAR  shift, and go to state 17

    VAR_LIST  go to state 46


State 34

   11 DECLARATION_STATEMENT: INT KEYWORDS SC .

    $default  reduce using rule 11 (DECLARATION_STATEMENT)


State 35

    7 DECLARATION_STATEMENT: INT VAR_LIST SC .

    $default  reduce using rule 7 (DECLARATION_STATEMENT)


State 36

   12 DECLARATION_STATEMENT: FLOAT KEYWORDS SC .

    $default  reduce using rule 12 (DECLARATION_STATEMENT)


State 37

    8 DECLARATION_STATEMENT: FLOAT VAR_LIST SC .

    $default  reduce using rule 8 (DECLARATION_STATEMENT)


State 38

   13 DECLARATION_STATEMENT: DOUBLE KEYWORDS SC .

    $default  reduce using rule 13 (DECLARATION_STATEMENT)


State 39

    9 DECLARATION_STATEMENT: DOUBLE VAR_LIST SC .

    $default  reduce using rule 9 (DECLARATION_STATEMENT)


State 40

   14 DECLARATION_STATEMENT: CHAR KEYWORDS SC .

    $default  reduce using rule 14 (DECLARATION_STATEMENT)


State 41

   10 DECLARATION_STATEMENT: CHAR VAR_LIST SC .

    $default  reduce using rule 10 (DECLARATION_STATEMENT)


State 42

   20 PROGRAM_STATEMENT: KEY EQ . A_EXPN SC

    LB   shift, and go to state 47
    VAR  shift, and go to state 48

    A_EXPN  go to state 49


State 43

   19 PROGRAM_STATEMENT: VAR EQ . A_EXPN SC

    LB   shift, and go to state 47
    VAR  shift, and go to state 48

    A_EXPN  go to state 50


State 44

    5 PROGRAM_STATEMENTS: PROGRAM_STATEMENT PROGRAM_STATEMENTS .

    $default  reduce using rule 5 (PROGRAM_STATEMENTS)


State 45

   15 KEYWORDS: KEY COMA KEYWORDS .

    $default  reduce using rule 15 (KEYWORDS)


State 46

   17 VAR_LIST: VAR COMA VAR_LIST .

    $default  reduce using rule 17 (VAR_LIST)


State 47

   22 A_EXPN: LB . A_EXPN RB

    LB   shift, and go to state 47
    VAR  shift, and go to state 48

    A_EXPN  go to state 51


State 48

   23 A_EXPN: VAR .

    $default  reduce using rule 23 (A_EXPN)


State 49

   20 PROGRAM_STATEMENT: KEY EQ A_EXPN . SC
   21 A_EXPN: A_EXPN . OP A_EXPN

    SC  shift, and go to state 52
    OP  shift, and go to state 53


State 50

   19 PROGRAM_STATEMENT: VAR EQ A_EXPN . SC
   21 A_EXPN: A_EXPN . OP A_EXPN

    SC  shift, and go to state 54
    OP  shift, and go to state 53


State 51

   21 A_EXPN: A_EXPN . OP A_EXPN
   22       | LB A_EXPN . RB

    RB  shift, and go to state 55
    OP  shift, and go to state 53


State 52

   20 PROGRAM_STATEMENT: KEY EQ A_EXPN SC .

    $default  reduce using rule 20 (PROGRAM_STATEMENT)


State 53

   21 A_EXPN: A_EXPN OP . A_EXPN

    LB   shift, and go to state 47
    VAR  shift, and go to state 48

    A_EXPN  go to state 56


State 54

   19 PROGRAM_STATEMENT: VAR EQ A_EXPN SC .

    $default  reduce using rule 19 (PROGRAM_STATEMENT)


State 55

   22 A_EXPN: LB A_EXPN RB .

    $default  reduce using rule 22 (A_EXPN)


State 56

   21 A_EXPN: A_EXPN . OP A_EXPN
   21       | A_EXPN OP A_EXPN .

    OP  shift, and go to state 53

    OP        [reduce using rule 21 (A_EXPN)]
    $default  reduce using rule 21 (A_EXPN)
